fixed spacing header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,9 +95,7 @@ h1 {
 }
 
 .stars {
-  margin: 0;
-  padding: 0;
-  display: block;
+  margin-right: 15px;
   margin-top: 2.5%;
   text-align: right;
   width: 25%;
@@ -132,6 +130,7 @@ li {
 }
 
 button {
+  margin-top: 15px;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -168,4 +167,5 @@ p {
 .timer {
   display: inline-block;
   margin-top: 2.5%;
+  margin-right: 15px;
 }
